@@ -495,6 +495,9 @@ public class DeltaProcessor {
 				if (element != null) {
 					updateIndexAddResource(element, delta);
 					elementAdded(element, delta);
+					//If new project has been added, don't need to add the children 
+					//as the indexing job will do that for us
+					if (element.getElementType() == ICElement.C_PROJECT) return false;
 				}
 				return true;
 
